[package]
name = "tapestry-analysis"
version = "0.5.0"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Collection of cryptanalysis tools for checksum and hash algorithms"
keywords = ["checksum", "hash", "algorithm", "crypto", "cryptanalysis"]
readme = "README.md"
repository = "https://github.com/jgerrish/tapestry-analysis"
homepage = "https://github.com/jgerrish/tapestry-analysis"
license = "MIT"

[features]
external-rand = ["dep:rand"]

[dependencies]
checksum-tapestry = "0.5"

# By default, don't use an external rand create.
# We can use CRCs as pseudorandom sequences
#
# It's not secure, but it works for the purposes here as an example.
# If you want to substitute another algorithm, feel free to and enjoy
# hacking!
rand = { version = "0.8", optional = true }
